--- a/src/main/resources/msg.properties
+++ b/src/main/resources/msg.properties
@@ -17,7 +17,8 @@ HELP=Help
 SEARCH=Search
 IMPRESSUM=Impressum
 REGISTRIEREN=Registrieren
-UPLOAD=UPLOAD
+UPLOAD=Upload
+REPORT=Report
 
 #Page titles
 INDEXPAGETITLE=Revisor-Page
